added the option to override server arguments in the domain scripts